feat: first functional

--- a/edemet/src/CMakeLists.txt
+++ b/edemet/src/CMakeLists.txt
@@ -9,7 +9,7 @@ project(${APP_NAME})
 
 find_package(common)
 enable_language(C ASM CXX)
-collect(PROJECT_LIB_DEPS xilstandalone;xiltimer)
+collect(PROJECT_LIB_DEPS xilstandalone;xiltimer;freertos)
 collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
